--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
 data/**
-assignments/assignment1/cs231n/datasets/**
 *.pyc
 assignments/**/*.pyc
+assignments/assignment1/cs231n/datasets/**
 assignments/assignment1/cs231n/classifiers/__pycache__/**
 assignments/assignment1/cs231n/classifiers/.ipynb_checkpoints/**
 assignments/assignment1/.ipynb_checkpoints/**
+assignments/assignment1/cs231n/.ipynb_checkpoints/
+assignments/assignment2/cs231n/datasets/**
+assignments/assignment2/cs231n/classifiers/__pycache__/**
+assignments/assignment2/cs231n/classifiers/.ipynb_checkpoints/**
+assignments/assignment2/.ipynb_checkpoints/**
+assignments/assignment2/cs231n/.ipynb_checkpoints/
