--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ assignments/assignment2/cs231n/classifiers/__pycache__/**
 assignments/assignment2/cs231n/classifiers/.ipynb_checkpoints/**
 assignments/assignment2/.ipynb_checkpoints/**
 assignments/assignment2/cs231n/.ipynb_checkpoints/
+assignments/assignment2/cs231n/build/
+assignments/assignment2/cs231n/im2col_cython.c
+assignments/assignment2/cs231n/im2col_cython.cpython-38-x86_64-linux-gnu.so
